--- a/src/components/CardContainer/CardContainer.css
+++ b/src/components/CardContainer/CardContainer.css
@@ -37,3 +37,17 @@
     border: 1px solid black;
     background-color: var(--orange);
 }
+
+@media screen and (max-width: 800px) {
+    .container {
+        padding: 1rem 0;
+        display: flex;
+        flex-direction: column;
+    }
+    .inputs-and-buttons{
+        flex-direction: column;
+    }
+    .buttons {
+        align-self: center;
+    }
+}
